# OOP_Lab7

./: CMakeLists.txt  README.md
include/: battle_visitor.h  console_observer.h  log_observer.h  npc.h  npc_factory.h  npc_visitor.h  observer.h  world.h
src/: battle_visitor.cpp  bear.cpp  console_observer.cpp  log_observer.cpp  main.cpp  npc.cpp  npc_factory.cpp  robber.cpp  werewolf.cpp  world.cpp
tests/: tests.cpp
